# code_to_md

./: GIST_DRAFT.md  README.md  README_SNIPPET.md  batch_converter.py  pyproject.toml  requirements.txt
markitdown_batch/: __init__.py
test_output/: combined.md
test_sample/: latin1.py  ok.py
