[project]
name = "markitdown-batch"
version = "0.1.0"
description = "Batch-convert source files to Markdown using markitdown"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Keep dependency list minimal; real dependency is markitdown (listed in requirements.txt)
dependencies = [
    "markitdown==0.1.3",
    "pathspec>=0.10.3",
]

[project.scripts]
markitdown-batch = "markitdown_batch:main"

[tool.setuptools.packages.find]
exclude = ["output", "tests", ".venv"]
